network-security-policies/envoy-egress-http-mysql.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Allow egress to HTTP and MySQL backends"
metadata:
  name: "egress-http-mysql"
  namespace: envoy
spec:
  endpointSelector:
    matchLabels:
      app: envoy
  egress:
  - toEndpoints:
    - matchLabels:
        "io.kubernetes.pod.namespace": "nextcloud"
        "app.kubernetes.io/instance": "nextcloud"
      toPorts:
      - ports:
        - port: "80"
          protocol: TCP
    - matchLabels:
        "io.kubernetes.pod.namespace": "prestashop"
        "app": "prestashop"
      toPorts:
      - ports:
        - port: "80"
          protocol: TCP
    - matchLabels:
        "io.kubernetes.pod.namespace": "monitoring"
        "app": "grafana"
      toPorts:
      - ports:
        - port: "3000"
          protocol: TCP
    - matchLabels:
        "io.kubernetes.pod.namespace": "monitoring"
        "app": "prometheus"
      toPorts:
      - ports:
        - port: "9090"
          protocol: TCP
    - matchLabels:
        "io.kubernetes.pod.namespace": "kube-system"
        "k8s-app": "hubble-ui"
      toPorts:
      - ports:
        - port: "12000"
          protocol: TCP
    - matchLabels:
        "io.kubernetes.pod.namespace": "mariadb"
        "app": "mariadb"
      toPorts:
      - ports:
        - port: "3306"
          protocol: TCP
